# learning-dsa

./: .tool-versions  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
notes/: cpython-algorithm-study.md  lesson_template.py  progression-algo-binary-search-trees.md  progression-algo.md  progression-ds.md  recommendations.md
src/algorithms/: 001_intro.py  002_linear_search.py  003_binary_search.py  004_selection_sort.py  005_insertion_sort.py  006_bubble_sort.py  007_merge_sort.py  008_quick_sort.py  009_stable_sorting_and_partitioning.py  010_timsort.py  011_greedy_algorithms_simple_interval_scheduling.py  012_divide_and_conquer_closest_pair_of_points.py  013_recursion_vs_iteration_tail_recursion_elimination.py  014_memoization_basics_fibonacci.py  015_algorithm_choice_based_on_data_characteristics.py  016_using_bisect_for_insertion_in_sorted_lists.py  017_itertools_for_combinatorial_generation.py  018_functools_caching_partial_to_improve_functions.py  019_linear_search_revisited_best_cases_and_limitations.py  __init__.py
src/algorithms/bst/: 001_bst_fundamentals.py  002_variations_handling_edge_cases.py  003_tree_height_and_skewness_why_self_balancing_is_needed.py  004_height_balanced_avl_trees_rotations_invariants.py  005_red_black_trees.py  006_treap_randomized_bst_with_heap_priority.py  007_splay_trees_self_adjusting_bst.py  008_weight_balanced_size_balanced_bsts.py  009_optimal_bst_knuths.py  010_approximate_heuristic_approaches_to_optimal_bst.py  011_b_trees_external_memory_disk.py  012_2_3_trees_other_multiway_balance_structures.py  013_t_trees_in_memory_balanced_trees_for_dbs.py  014_t_trees_in_memory_balanced_trees_for_db.py  015_priority_queue_from_bst_treap.py  __init__.py
src/data_structures/: 001_intro.py  002_arrays.py  003_slicing.py  004_stacks.py  005_queues.py  006_linked_lists.py  007_iterators_and_generators.py  008_hash_tables.py  009_hash_table_collision_handling.py  010_python_set.py  __init__.py
